Add new endpoint in dbsync-api service
